# a-colour

./: .gitignore  .pnpmrc  CLAUDE.md  README.md  biome.json  index.html  justfile  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
.github/workflows/: deploy.yml
docs/eval/: ground-truth-css-literal.json  ground-truth-small-glove-300d.json  ground-truth-small-glove-50d.json  ground-truth-small-literal-handcurated.json  ground-truth-small-literal-static-handcurated-distilled.json  ground-truth-small-literal-static-handcurated.json  ground-truth-small-literal-static.json  ground-truth-small-literal.json  ground-truth-xkcd-literal.json  phase-1.5a-small-handcurated.md  phase-1.5b-static-expander.md  phase-1a-css.md  phase-1a-small.md  phase-1a-xkcd.md  phase-2a-decision.md  phase-2a-glove-300d.md  phase-2a-glove-50d.md  phase-distillation.md
guidance/concepts/: color-matching.md  word-mode.md
guidance/references/: colors.csv
public/: _headers  colour-embeddings.meta.json  robots.txt  sitemap.xml
public/word-encoder/: config.json  tokenizer.json
scripts/: build-embeddings.ts  build-expander-vectors.ts  build-libraries.ts  dump-for-training.ts  eval.ts  fetch-glove.ts  verify-distillation.ts
scripts/candidates/: hybrid-search.ts
scripts/data/: css-name-splits.json  distillation-vocab.json  query-expansions.json  xkcd-blocklist.txt
src/: App.css  App.tsx  index.css  main.tsx
training/: README.md  build_embeddings.py  eval_model.py  export_onnx.py  pyproject.toml  train.py
training/data/: colors-small.json  eval-cases.json  training-pairs.json
(+37 files in other folders)
